organizing the assets

--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
 </head>
 
 <body >
-  <h1>Teste</h1>
-  <h2>Subteste</h2>
-  <a href="#"> link </a>
+  <header>
+    <nav id="primary">
+      <div>
+        <img src="assets/icons/List.svg" alt="ícone de menu">
+      </div>
+      
+      <div>
+
+      </div>
+
+      <div>
+
+      </div>
+
+    </nav>
+  </header>
 </body>
 
 </html>
