--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
     </nav>
 
   </header>
+
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <div>
+        <img src="assets/images/Image 01.png" alt="robô doméstico branco com detalhes em cinza claro e escuro, olhos e ouvidos brilhantes em um cenário de um quarto">
+      </div>
+
+      <div class="grid grid-cols-2 gap-16">
+        <div>
+          <img src="assets/images/Image 02.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/images/Image 03.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/images/Image 04.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/images/Image 05.png" alt="">
+        </div>
+
+      </div>
+
+    </section>
+  </main>
 </body>
 
 </html>
