Adding gradient background

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div>
+      <div class="card">
         <img src="assets/images/Image 01.png" alt="robô doméstico branco com detalhes em cinza claro e escuro, olhos e ouvidos brilhantes em um cenário de um quarto">
       </div>
 
