--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
 
   <title>Portal de Notícias</title>
   <link rel="stylesheet" href="styles/index.css">
 </head>
 
-<body >
+<body>
   <header class="container">
     <nav id="primary" class="grid grid-flow-col">
-      <div>
+      <figure>
         <img src="assets/icons/List.svg" alt="ícone de menu">
         <strong>Menu</strong>
-      </div>
+      </figure>
 
-      <div>
+      <figure>
         <img src="assets/Logo.svg" alt="TecNews logo">
-      </div>
+      </figure>
 
-      <div>
+      <figure>
         <strong>Buscar</strong>
         <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa para pesquisa">
-      </div>
+      </figure>
     </nav>
     <nav id="secondary" class="grid grid-flow-col">
       <a href="">Inteligência Artificial</a>
@@ -38,7 +38,7 @@
       <a href="">Internet</a>
       <a href="">Vestíveis</a>
       <a href="">Realidade Aumentada</a>
-      <a href="">Realidade  Virtual</a>
+      <a href="">Realidade Virtual</a>
     </nav>
 
   </header>
@@ -46,30 +46,56 @@
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
       <figure class="card">
-        <img src="assets/images/Image 01.png" alt="robô doméstico branco com detalhes em cinza claro e escuro, olhos e ouvidos brilhantes em um cenário de um quarto">
+        <img src="assets/images/Image 01.png"
+          alt="robô doméstico branco com detalhes em cinza claro e escuro, olhos e ouvidos brilhantes em um cenário de um quarto">
 
         <figcaption>
           <span class="content-tag">robótica</span>
-          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+            eficiência nas residências.</h2>
         </figcaption>
       </figure>
 
       <div class="grid grid-cols-2 gap-16">
-        <div>
+        <figure class="card">
           <img src="assets/images/Image 02.png" alt="">
-        </div>
 
-        <div>
-          <img src="assets/images/Image 03.png" alt="">
-        </div>
+          <figcaption>
+            <span class="content-tag">Hologramas</span>
+            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!
+            </h2>
+          </figcaption>
+        </figure>
 
-        <div>
-          <img src="assets/images/Image 04.png" alt="">
-        </div>
+        <figure class="card">
+          <img src="assets/images/Image 03.png" alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
-        <div>
-          <img src="assets/images/Image 05.png" alt="">
-        </div>
+          <figcaption>
+            <span class="content-tag">Internet</span>
+            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...
+            </h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/Image 04.png" alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
+
+          <figcaption>
+            <span class="content-tag">Vestíveis</span>
+            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...
+            </h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional">
+
+          <figcaption>
+            <span class="content-tag">Virtual</span>
+            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradi...
+            </h2>
+          </figcaption>
+        </figure>
 
       </div>
 
