--- a/index.html
+++ b/index.html
@@ -62,37 +62,44 @@
 
           <figcaption>
             <span class="content-tag">Hologramas</span>
-            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!
+            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas
+              telas!
             </h2>
           </figcaption>
         </figure>
 
         <figure class="card">
-          <img src="assets/images/Image 03.png" alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
+          <img src="assets/images/Image 03.png"
+            alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
           <figcaption>
             <span class="content-tag">Internet</span>
-            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...
+            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como
+              vivemos e nos comuni...
             </h2>
           </figcaption>
         </figure>
 
         <figure class="card">
-          <img src="assets/images/Image 04.png" alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
+          <img src="assets/images/Image 04.png"
+            alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
 
           <figcaption>
             <span class="content-tag">Vestíveis</span>
-            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...
+            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights
+              valiosos para o...
             </h2>
           </figcaption>
         </figure>
 
         <figure class="card">
-          <img src="assets/images/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional">
+          <img src="assets/images/Image 05.png"
+            alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional">
 
           <figcaption>
             <span class="content-tag">Virtual</span>
-            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradi...
+            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a
+              aprendizagem tradi...
             </h2>
           </figcaption>
         </figure>
@@ -104,33 +111,38 @@
     <section id="weekly">
       <header class="grid grid-flow-col">
         <h3>Mais lidas da semana</h3>
-        <a href="#" class="grid grid-flow-col"></a>
-        <strong>Ver tudo</strong>
+        <a href="#" class="grid grid-flow-col">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
       </header>
-      <span></span>
 
       <div class="grid gap-16">
         <figure>
           <span class="content-tag">Veículos</span>
-          <img src="assets/images/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
+          <img src="assets/images/Image 06.png"
+            alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
           <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
         </figure>
 
         <figure>
           <span class="content-tag">hologramas</span>
-          <img src="assets/images/Image 07.png" alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
+          <img src="assets/images/Image 07.png"
+            alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
           <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...</p>
         </figure>
 
         <figure>
           <span class="content-tag">realidade virtual</span>
-          <img src="assets/images/Image 08.png" alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
+          <img src="assets/images/Image 08.png"
+            alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
           <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...</p>
         </figure>
 
         <figure>
           <span class="content-tag">Internet</span>
-          <img src="assets/images/Image 09.png" alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
+          <img src="assets/images/Image 09.png"
+            alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
           <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
         </figure>
       </div>
