--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
         <article class="grid grid-flow-col gap-16">
           <div>
             <span class="content-tag">Inteligência Artificial</span>
-            <h3 class="text-xl">Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a
+            <h3 class="text-xl">Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e
+              aumentarem a
               produtividade no dia a dia.</h3>
             <p class="text-sm">No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador
               surge como um aliado indispensável para quem busca maior concentração e eficiência no cotidiano.
@@ -223,79 +224,86 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="Mude de vida através da programação, publi   Rockeatseat">
       </div>
-    </div>
 
-    <section id="more">
-      <header class="grid grid-flow-col">
-        <h3>Viu isso aqui?</h3>
-        <a href="#" class="grid grid-flow-col">
-          <strong>Ver tudo</strong>
-          <span></span>
-        </a>
-      </header>
+      <section id="more">
+        <header class="grid grid-flow-col">
+          <h3>Viu isso aqui?</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>Ver tudo</strong>
+            <span></span>
+          </a>
+        </header>
 
-      <div class="grid gap-32">
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 14.png" alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
-          </div>
+        <div class="grid gap-32">
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 14.png"
+                alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
+            </div>
 
-          <div>
-            <span class="content-tag">software</span>
-            <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
-          </div>
-        </article>
+            <div>
+              <span class="content-tag">software</span>
+              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...</h3>
+            </div>
+          </article>
 
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 15.png" alt="Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais. ">
-          </div>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 15.png"
+                alt="Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais. ">
+            </div>
 
-          <div>
-            <span class="content-tag">realidade virtual</span>
-            <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...</h3>
-          </div>
-        </article>
+            <div>
+              <span class="content-tag">realidade virtual</span>
+              <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial
+                comp...</h3>
+            </div>
+          </article>
 
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 16.png" alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.">
-          </div>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 16.png"
+                alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.">
+            </div>
 
-          <div>
-            <span class="content-tag">criptomoedas</span>
-            <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...</h3>
-          </div>
-        </article>
+            <div>
+              <span class="content-tag">criptomoedas</span>
+              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...</h3>
+            </div>
+          </article>
 
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 17.png" alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
-          </div>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 17.png"
+                alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...">
+            </div>
 
-          <div>
-            <span class="content-tag">software</span>
-            <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
-          </div>
-        </article>
+            <div>
+              <span class="content-tag">drones</span>
+              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.
+                e pro...</h3>
+            </div>
+          </article>
 
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 18.png" alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
-          </div>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 18.png"
+                alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lista de espera por transplantes.">
+            </div>
 
-          <div>
-            <span class="content-tag">software</span>
-            <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
-          </div>
-        </article>
-      </div>
+            <div>
+              <span class="content-tag">impressão 3D</span>
+              <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...</h3>
+            </div>
+          </article>
+        </div>
 
-    </section>
+      </section>
+    </aside>
   </main>
 </body>
 
